--- a/Layouts/Layout 1.uistate.xml
+++ b/Layouts/Layout 1.uistate.xml
@@ -4,10 +4,10 @@
 It is entirely optional and the project will load without it.  If you are placing the project under source control,
 you probably do not want to add any .uistate.xml files to the repository.-->
     <camera>
-        <position-x>190.271</position-x>
+        <position-x>415.665</position-x>
         <position-y>432.411</position-y>
         <position-z>117.393</position-z>
-        <lookat-x>190.271</lookat-x>
+        <lookat-x>415.665</lookat-x>
         <lookat-y>432.411</lookat-y>
         <lookat-z>0</lookat-z>
     </camera>
@@ -27,6 +27,8 @@ you probably do not want to add any .uistate.xml files to the repository.-->
     <layers>
         <layer locked="0" name="Layer 1" parallax-in-editor="0" visible="1" />
         <layer locked="0" name="Game" parallax-in-editor="0" visible="1" />
-        <layer locked="1" name="UI" parallax-in-editor="0" visible="1" />
+        <layer locked="0" name="UI" parallax-in-editor="0" visible="1" />
+        <layer locked="0" name="Layer 0" parallax-in-editor="0" visible="1" />
+        <layer locked="0" name="Layer 2" parallax-in-editor="0" visible="1" />
     </layers>
 </c2uistate>
