--- a/Layouts/HerpetiDerpetiBup.uistate.xml
+++ b/Layouts/HerpetiDerpetiBup.uistate.xml
@@ -5,10 +5,10 @@ It is entirely optional and the project will load without it.  If you are placin
 you probably do not want to add any .uistate.xml files to the repository.-->
     <camera>
         <position-x>640</position-x>
-        <position-y>2081.28</position-y>
+        <position-y>1650.38</position-y>
         <position-z>131.502</position-z>
         <lookat-x>640</lookat-x>
-        <lookat-y>2081.28</lookat-y>
+        <lookat-y>1650.38</lookat-y>
         <lookat-z>0</lookat-z>
     </camera>
     <snap-to-grid>1</snap-to-grid>
@@ -23,7 +23,7 @@ you probably do not want to add any .uistate.xml files to the repository.-->
         <property expanded="0" name="Margins" />
         <property expanded="1" name="Effects" />
     </properties>
-    <active-layer name="Layer 0" />
+    <active-layer name="UI" />
     <layers>
         <layer locked="1" name="Layer 1" parallax-in-editor="0" visible="1" />
         <layer locked="1" name="Game" parallax-in-editor="0" visible="1" />
