--- a/Layouts/Layout 1.xml
+++ b/Layouts/Layout 1.xml
@@ -407,7 +407,7 @@
             </instances>
             <effects />
         </layer>
-        <layer name="UI" sid="8227509307672186">
+        <layer name="UI Mobile" sid="8227509307672186">
             <initially-visible>1</initially-visible>
             <background-color>255,255,255</background-color>
             <transparent>1</transparent>
@@ -555,6 +555,25 @@
                         <opacity>1</opacity>
                     </world>
                 </instance>
+            </instances>
+            <effects />
+        </layer>
+        <layer name="UI" sid="7642685220640177">
+            <initially-visible>1</initially-visible>
+            <background-color>255,255,255</background-color>
+            <transparent>1</transparent>
+            <parallax>
+                <x>0</x>
+                <y>0</y>
+            </parallax>
+            <zoom-rate>1</zoom-rate>
+            <opacity>1</opacity>
+            <force-own-texture>0</force-own-texture>
+            <global>1</global>
+            <use-render-cells>0</use-render-cells>
+            <blend-mode>0</blend-mode>
+            <effect-fallback>0</effect-fallback>
+            <instances>
                 <instance type="debug_text" uid="9">
                     <properties>
                         <text>kkee\nsdfdsg</text>
