--- a/Layouts/HerpetiDerpetiBup.uistate.xml
+++ b/Layouts/HerpetiDerpetiBup.uistate.xml
@@ -23,10 +23,10 @@ you probably do not want to add any .uistate.xml files to the repository.-->
         <property expanded="0" name="Margins" />
         <property expanded="1" name="Effects" />
     </properties>
-    <active-layer name="UI" />
+    <active-layer name="Game" />
     <layers>
         <layer locked="1" name="Layer 1" parallax-in-editor="0" visible="1" />
-        <layer locked="1" name="Game" parallax-in-editor="0" visible="1" />
+        <layer locked="0" name="Game" parallax-in-editor="0" visible="1" />
         <layer locked="0" name="Layer 0" parallax-in-editor="0" visible="1" />
         <layer locked="0" name="UI" parallax-in-editor="0" visible="1" />
     </layers>
